data/derived/fa15/progs/unify/prog0606.ml.out
Characters 8-11:
  let _ = abs -1.0;;
          ^^^
Error: This expression has type float -> float
       but an expression was expected of type int
